syntax = "proto3";

package kvbridge;

option go_package = "./startup";

service StartupService {
  rpc GetNodeInfo(GetNodeInfoRequest) returns (GetNodeInfoResponse);
}

message GetNodeInfoRequest {}
message GetNodeInfoResponse { uint32 id = 1; }
